ADjusted some stuff
